cleaned up Connection, except for doInBackgroundDownloadMissingMedia, which is all kinds of broken